--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
     <description>商城父模块</description>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>coshine-shop-server</module>
+        <module>coshine-shop-system</module>
+    </modules>
+
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
